--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,12 @@
     "import/extensions": 0,
     "import/no-extraneous-dependencies": 0,
     "import/no-unresolved": [2, { "ignore": ["electron"] }],
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "no-plusplus": [2, { "allowForLoopAfterthoughts": true }],
+    "prefer-template": 0,
+    "no-param-reassign": [2, { "props": false }]
+  },
+  "env": {
+    "browser": true
   }
 }
